deployment/k8s/kong-gateway/kong-controller-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kong-controller-bun
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kong-controller-bun
  template:
    metadata:
      labels:
        app: kong-controller-bun
    spec:
      containers:
        - name: kong-controller-bun
          image: ghcr.io/rickyfirmansyah27/kong-gateway-service:20250104131940
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: kong-config-volume
              mountPath: /etc/kong/declarative
              readOnly: true
      imagePullSecrets:
        - name: ghcr-secret
      volumes:
        - name: kong-config-volume
          configMap:
            name: kong-config-bun
---
apiVersion: v1
kind: Service
metadata:
  name: kong-service-bun
spec:
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
  selector:
    app: kong-controller-bun
